can now add orders

--- a/app/views/items/home.html.erb
+++ b/app/views/items/home.html.erb
@@ -8,7 +8,7 @@
         </div> 
         <p>Total: ${{cart.total}}</p> 
           
-        <input type="text" placeholder="Enter Name" class="name" ng-model="name">
+        <input type="text" placeholder="Enter Name" id="name-input" ng-model="name">
         <input type="submit" class="order-button" value="Place Order" ng-click="placeOrder()">
       </form>
     </div>
