--- a/app/views/items/home.html.erb
+++ b/app/views/items/home.html.erb
@@ -1,17 +1,19 @@
 <div ng-app="AmazonApp" class="container">
-  <div ng-controller="ItemsCtrl">      
-    <div ng-model="cart" class="shoppingCart">
+  <div ng-controller="CartCtrl">      
+    <div ng-model="Cart" class="shoppingCart">
       <p>Shopping Cart:</p>
         <form class="order-form">
-          <div ng-repeat="item in cart.items">
+          <div ng-repeat="item in Cart.items">
             <span>{{item.name}}</span> <span>${{item.price}}</span> <span>Quantity: {{item.quantity}}</span> <input type="button" ng-click="removeFromCart(item.name,item.price)" value="Remove From Cart" class="btn btn-xs btn-danger"></p>
           </div> 
-          <p>Total: ${{cart.total}}</p> 
+          <p>Total: ${{Cart.total}}</p> 
             
-          <input type="text" placeholder="Enter Name" id="name-input" ng-model="name">
+          <input type="text" placeholder="Enter Name" id="name-input" ng-model="Cart.name">
           <input type="submit" class="btn btn-xs btn-success" value="Place Order" ng-click="placeOrder()">
         </form> 
     </div>
+  </div>
+  <div ng-controller="ItemsCtrl">  
     <div ng-repeat="item in items" class="col-md-6">
         <div class="col-md-12"><h3>{{item.name}}</h3></div>
         <div class="col-md-12">{{item.description}}</div>
