--- a/app/views/items/home.html.erb
+++ b/app/views/items/home.html.erb
@@ -13,7 +13,7 @@
         </form> 
     </div>
   </div>
-  <div ng-controller="ItemsCtrl">  
+  <div ng-controller="ItemsCtrl" class="row">  
     <div ng-repeat="item in items" class="col-md-6">
         <div class="col-md-12"><h3>{{item.name}}</h3></div>
         <div class="col-md-12">{{item.description}}</div>
@@ -31,10 +31,14 @@
         <img ng-src={{item.url}}><br>
 
     </div>
-    <div ng-repeat="order in orders" class="col-md-12">
-      <p>{{order.name}}</p>
-      <p>${{order.cost}}</p>
-    </div>
+  </div>
+  <div ng-controller="PastOrders">
+    <div class="row">
+      <h3>Past Orders</h3>
+      <div ng-repeat="order in orders" class="col-md-3">
+        <p>{{order.person}}: ${{order.cost}}</p>
+      </div>
+    </div>  
   </div>
 </div>
 
