--- a/app/assets/stylesheets/items.css.scss
+++ b/app/assets/stylesheets/items.css.scss
@@ -6,6 +6,12 @@
 .col-md-6 {
   
 }
+.addCart{
+  margin-bottom:20px;
+}
+.itemsContainer {
+  margin-bottom: 45px;
+}
 .shoppingCart {
-  margin: 20px auto;
+  margin-bottom:30px;
 }
