able to display and link to different pages using routes

--- a/app/assets/javascripts/app.js.erb
+++ b/app/assets/javascripts/app.js.erb
@@ -15,7 +15,6 @@ app.config(function($routeProvider) {
       controller: "pastOrders"
     })
     .otherwise({
-      templateUrl: "<%= asset_path('templates/items.html') %>",
-      controller: "ItemsCtrl"
+      redirectTo: "/"
     });
 });
